# taichi-quant

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_quant.py
taichi_quant/: __init__.py  quantizer.py
taichi_quant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_quant.py
